<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/weeklyWeatherIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/cloudy" />

        <TextView
            android:id="@+id/weeklyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/weeklyWeatherIcon"
            android:text="@string/weekly_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/weeklyWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weeklyDate"
            android:layout_toEndOf="@+id/weeklyWeatherIcon"
            android:text="@string/weather_description" />

        <TextView
            android:id="@+id/weeklyTemperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/temperature" />

    </RelativeLayout>

</android.support.v7.widget.CardView>